--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
+html {
+  height: 100%;
+}
+
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  min-height: 100%;
   background: url('https://upload.wikimedia.org/wikipedia/commons/9/93/Hogwarts_%2828731105444%29.jpg') no-repeat center center;
   background-position: center;
   background-size: cover;
+}
+
+#root {
+  min-height: 100dvh;
 }
 
 h1 {
@@ -44,4 +48,30 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+html::-webkit-scrollbar {
+  width: 1em;
+}
+ 
+html::-webkit-scrollbar-track, .content-wrapper::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+html::-webkit-scrollbar-thumb {
+  background-color: #172E50;
+  border: 1px solid darkgrey;
+  border-radius: 1rem;
+}
+
+html::-webkit-scrollbar-thumb:hover, .content-wrapper::-webkit-scrollbar-thumb:hover {
+  background-color: #747bff;
+  border: 1px solid darkgrey;
+  border-radius: 1rem;
+}
+
+.content-wrapper::-webkit-scrollbar-thumb {
+  background-color: #747bff;
+  border: 1px solid darkgrey;
+  border-radius: 1rem;
 }
